samples/_failures_safe/1761696929_2b9ee0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8896f677.c: In function ‘main’:
./samples/SAFE/__tmp_8896f677.c:154:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 |         size_t len
      |         ^~~~~~
./samples/SAFE/__tmp_8896f677.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8896f677.c:154:9: error: expected declaration or statement at end of input
